# bsa

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  annotated.html  bsa.tagfile.xml  bsa_8hpp.html  classbsa_1_1components_1_1basic__byte__container.html  classbsa_1_1components_1_1byte__container.html  classbsa_1_1components_1_1compressed__byte__container.html  classbsa_1_1components_1_1hashmap.html  classbsa_1_1components_1_1hashmap_1_1index__t.html  classbsa_1_1components_1_1key.html  classbsa_1_1compression__error.html  classbsa_1_1exception.html  classbsa_1_1fo4_1_1archive.html  classbsa_1_1fo4_1_1chunk.html  classbsa_1_1fo4_1_1file.html  classbsa_1_1read__source.html  classbsa_1_1tes3_1_1archive.html  classbsa_1_1tes3_1_1file.html  classbsa_1_1tes4_1_1archive.html  classbsa_1_1tes4_1_1directory.html  classbsa_1_1tes4_1_1file.html  classbsa_1_1write__sink.html  codecov.yml  common_8hpp.html  conceptbsa_1_1concepts_1_1stringable.html  concepts.html  dir_4059d8b43cf8811632402939ac780410.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_bffa2b1a379c522d27dd1da576a1becf.html  files.html  fo4_8hpp.html  fwd_8hpp.html  index.html  index_8doxy.html  (+31 more)
.github/workflows/: cmake.yml  deploy_docs.yml  formatting.yml  main_ci.yml
cmake/: FindLZ4.cmake  common.cmake  config.cmake.in  project_version.hpp.in  version.cmake
cmake/ports/binary-io/: portfile.cmake  vcpkg.json
cmake/ports/catch2/: portfile.cmake  vcpkg.json
cmake/ports/expected-lite/: portfile.cmake
cmake/ports/mmio/: portfile.cmake  vcpkg.json
cmake/ports/rsm-binary-io/: portfile.cmake  vcpkg.json
cmake/ports/rsm-mmio/: portfile.cmake
data/: common_guess_test.7z  examples_pack_unpack_test.7z  fo4_chunk_test.7z  fo4_compression_test.7z  fo4_cubemap_test.7z  fo4_dds_test.7z  fo4_dx9_test.7z  fo4_invalid_test.7z  fo4_missing_string_table_test.7z  fo4_next_gen_test.7z  fo4_write_test.7z  in_memory_test.7z  tes3_invalid_test.7z  tes3_read_test.7z  tes3_write_test.7z  tes4_compression_mismatch_test.7z  tes4_compression_test.7z  tes4_data_sharing_name_test.7z  tes4_flags_test.7z  tes4_invalid_test.7z  tes4_xbox_read_test.7z  tes4_xbox_write_test.7z  tes4_xmem_test.7z
docs/: CMakeLists.txt  header.html  index.doxy  poxy.toml.in
docs/images/: banner_small.psd
examples/: CMakeLists.txt  pack_unpack.cpp
extras/xmem/: CMakeLists.txt  CMakePresets.json  vcpkg.json
extras/xmem/cmake/: version.hpp.in
extras/xmem/data/: roundtrip_test.7z
extras/xmem/src/: CMakeLists.txt  main.cpp
extras/xmem/src/bsa/xmem/: api.hpp  binary_stdio.hpp  expected.hpp  hashing.cpp  hashing.hpp  unicode.hpp  util.hpp  winapi.hpp  xcompress.cpp  xcompress.hpp  xmem.hpp
extras/xmem/tests/: CMakeLists.txt
extras/xmem/tests/src/: main.test.cpp
extras/xmem/tests/src/bsa/xmem/: api.test.cpp  hashing.test.cpp  unicode.test.cpp  util.test.cpp  winapi.test.cpp  xmem.test.cpp
include/bsa/: all.hpp  bsa.hpp  fo4.hpp  fwd.hpp  tes3.hpp  tes4.hpp
include/bsa/detail/: common.hpp
natvis/: bsa_tes4.natvis
ports/boost-text/: CMakeLists.txt  config.cmake.in  portfile.cmake  vcpkg.json
scripts/: setup.sh  tes4_pack.py
scripts/opencppcoverage/: opencppcoverage.nuspec
scripts/opencppcoverage/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
src/: CMakeLists.txt  main.cpp
src/bsa/: all.cpp  fo4.cpp  tes3.cpp  tes4.cpp
src/bsa/detail/: binary_reproc.hpp  common.cpp
tests/: CMakeLists.txt  catch2.hpp  common.hpp  common_tests.cpp  fo4.test.cpp  fo4_tests.cpp  main.cpp  tes3.test.cpp  tes3_tests.cpp  tes4.test.cpp  tes4_tests.cpp  utility.hpp
tests/detail/: common.test.cpp
tests/examples/: pack_unpack.test.cpp
tests/src/bsa/: all.test.cpp  fo4.test.cpp  tes3.test.cpp  tes4.test.cpp
tests/src/bsa/detail/: common.test.cpp
visualizers/: bsa_common.natvis  bsa_fo4.natvis  bsa_tes3.natvis  bsa_tes4.natvis
